Add offline data

--- a/NBA-referees-analysis.ipynb
+++ b/NBA-referees-analysis.ipynb
@@ -57,12 +57,14 @@
    "metadata": {},
    "source": [
     "# Data collection and cleaning\n",
-    "We first import the data and remove calls from quarters before the 4th and a referee with missing data."
+    "We first import the data and remove calls from quarters before the 4th and a referee with missing data. The data is also available in the folder and can be imported with \n",
+    "\n",
+    "`orig_df = pd.read_csv('/data/all_games.csv')`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +111,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "orig_df = pd.read_csv('./data/all_games.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +235,7 @@
        "Name: review_decision, dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -249,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 18,
    "metadata": {
     "scrolled": true
    },
@@ -347,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 19,
    "metadata": {
     "scrolled": true
    },
@@ -531,7 +542,7 @@
        "15            Eli Roe        10.0                3               100.0"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -764,6 +775,7 @@
    "cell_type": "code",
    "execution_count": 87,
    "metadata": {
+    "collapsed": true,
     "jupyter": {
      "outputs_hidden": true
     },
@@ -915,6 +927,7 @@
    "cell_type": "code",
    "execution_count": 92,
    "metadata": {
+    "collapsed": true,
     "jupyter": {
      "outputs_hidden": true
     },
@@ -1481,6 +1494,7 @@
    "cell_type": "code",
    "execution_count": 116,
    "metadata": {
+    "collapsed": true,
     "jupyter": {
      "outputs_hidden": true
     },
@@ -1544,6 +1558,7 @@
    "cell_type": "code",
    "execution_count": 118,
    "metadata": {
+    "collapsed": true,
     "jupyter": {
      "outputs_hidden": true
     },
@@ -2012,9 +2027,7 @@
   {
    "cell_type": "code",
    "execution_count": 182,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
